Add pop out sidebar

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,8 +1,24 @@
 extends layout
 
+block navbar
+  div#mySidenav.sidenav
+    i#close.fad.fa-times-hexagon.closebtn(onclick="closeNav()")
+    a(href="#") About
+    a(href="#") Projects
+    a(href="#") History
+    a(href="#") Contact
+
+  #navbar
+    h1= title
+    
+    i#menu.fad.fa-cheeseburger(onclick="openNav()")
+      
+    
+    
+
 block content
-  h1= title
-  p Welcome to #{title}
+  
+  p My name is Terrence Kuiper and I am a Full Stack Web Developer.
   p This is a test..>>>
 
 block stuff
