--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,32 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+
+    script(src="https://kit.fontawesome.com/7761726a7c.js" crossorigin="anonymous")
+
+    script. 
+      src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"
+
+    script.
+      function openNav() {
+      document.getElementById("mySidenav").style.width = "50vw"
+      document.getElementById("main").style.marginLeft = "50vw"
+      document.body.style.backgroundColor = "rgba(0,0,0,0.4)"
+      document.getElementById("menu").style.visibility = "hidden"
+      }
+
+
+    script.
+      function closeNav() {
+      document.getElementById("mySidenav").style.width = "0";
+      document.getElementById("main").style.marginLeft = "0";
+      document.body.style.backgroundColor = "white";
+      document.getElementById("menu").style.visibility = "visible";
+      }
+
   body
-    block content
+    #main
+      block navbar
+      block content
   footer
     block stuff
