Add routes for contact, history & projects

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -39,11 +39,11 @@ html
         a(href="/about")#about About 
           i.fad.fa-id-card.mi
         a(href="/projects")#projects Projects 
-          i.fad.fa-hammer
+          i.fad.fa-hammer.mi
         a(href="/history")#history History 
-          i.fad.fa-history
+          i.fad.fa-history.mi
         a(href="/contact")#contact Contact 
-          i.fad.fa-at
+          i.fad.fa-at.mi
       block content
   footer
     block stuff
