--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -75,13 +75,17 @@ a {
 }
 
 #mySidenav a:hover {
-  left: 0; /* On mouse-over, make the elements appear as they should */
+  left: 0; 
 }
 
-/* The about link: 20px from the top with a green background */
+.mi {
+font-size: 3rem;
+}
+
 #home {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   top: 80px;
   background-color: hotpink;
 }
@@ -89,28 +93,32 @@ a {
 #about {
   display: flex;
   justify-content: space-between;
-  top: 140px;
+  align-items: center;
+  top: 170px;
   background-color: #4caf50;
 }
 
 #projects {
   display: flex;
   justify-content: space-between;
-  top: 200px;
+  align-items: center;
+  top: 260px;
   background-color: #f44336; /* Red */
 }
 
 #history {
   display: flex;
   justify-content: space-between;
-  top: 260px;
+  align-items: center;
+  top: 350px;
   background-color: #2196f3; /* Blue */
 }
 
 #contact {
   display: flex;
   justify-content: space-between;
-  top: 320px;
+  align-items: center;
+  top: 440px;
   background-color: #555; /* Light Black */
 }
 
