--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,8 @@
 extends layout
 
 block content
-  
+  profile
+    img#profile(src="/images/TerrenceKuiper.png")
   p My name is Terrence Kuiper and I am a Full Stack Web Developer.
   p This is a test..>>>
 
