--- a/views/layout.pug
+++ b/views/layout.pug
@@ -26,10 +26,33 @@ html
       document.getElementById("menu").style.visibility = "visible";
       }
 
-  body
+    script.
+      function dayMode() {
+        console.log("IMAGE",document.body.style.backgroundImage);
+        document.getElementById("body").style.backgroundImage="url(/images/dayMode.jpg)";
+        document.getElementById("dayMode").style =  "border-style: inset; color:lightsteelblue";
+        document.getElementById("nightMode").style = "border-style: outset";
+        document.getElementById("switch").style = "background-color: lightsteelblue; border-color: lightsteelblue;";
+ 
+      }
+
+    script.
+      function nightMode() {
+        console.log("IMAGE",document.body.style.backgroundImage);
+        document.getElementById("body").style.backgroundImage="url(/images/nightMode.jpg)";
+        document.getElementById("dayMode").style = "border-style: outset";
+        document.getElementById("nightMode").style =  "border-style: inset; color:#424242";
+        document.getElementById("switch").style = "background-color: #424242; border-color: gainsboro";
+
+      }
+
+  body#body
     #main
       #navbar
         h1= title
+        #switch
+          i#dayMode.fad.fa-house-day(onclick="dayMode()")
+          i#nightMode.fad.fa-house-night(onclick="nightMode()")
         i#menu.fad.fa-hamburger(onclick="openNav()")
       #mySidenav.sidenav
         i#close.fad.fa-times-hexagon.closebtn(onclick="closeNav()")
