--- a/views/index.pug
+++ b/views/index.pug
@@ -4,8 +4,9 @@ block content
   
   p My name is Terrence Kuiper and I am a Full Stack Web Developer.
   profile
+    img#profileBackgroundDay(src="/images/sun.jpg")
+    img#profileBackgroundNight(src="/images/moon.jpg")
     img#profile(src="/images/TerrenceKuiper.png")
-    
   p This is a test..>>>
 
 block stuff
