--- a/views/index.pug
+++ b/views/index.pug
@@ -2,12 +2,32 @@ extends layout
 
 block content
   
-  p My name is Terrence Kuiper and I am a Full Stack Web Developer.
+  p.dayNight My name is Terrence Kuiper and I am a Full Stack Web Developer.
   profile
     img#profileBackgroundDay(src="/images/sun.jpg")
     img#profileBackgroundNight(src="/images/moon.jpg")
     img#profile(src="/images/TerrenceKuiper.png")
-  p This is a test..>>>
+  
+  p.dayNight I recently finished an intensive 12-week program with Lighthouse Labs and obtained a diploma in Web Development. This is a very rigorous program that teaches industry-leading languages like JavaScript, Ruby on Rails, and React. 
+
+  p.dayNight This comprehensive program has provided an excellent foundation in the different technologies, languages, frameworks, and responsive design principles needed to become a well-rounded full-stack web developer. 
+
+  p.dayNight This project which started on January 21st, 2020 has been created from scratch, to demonstrate (to you) my level of competency with regards to Web Development.
+ 
+  h2.dayNight >>>
+
+  h3.dayNight Tech Stack
+  mixin stack(tech)
+    li.stack= tech
+  ul.dayNight
+    +stack('Node.JS')
+    +stack('Express')
+    +stack('Jade/Pug')
+    +stack('SCSS')
+    +stack('JQuery')
+    +stack('Express')
+
+  p.dayNight  
 
 block stuff
   #footer
