--- a/views/index.pug
+++ b/views/index.pug
@@ -14,7 +14,7 @@ block content
 
   p.dayNight This project which started on January 21st, 2020 has been created from scratch, to demonstrate (to you) my level of competency with regards to Web Development.
  
-  h2.dayNight >>>
+  h2.dayNight
 
   h3.dayNight Tech Stack
   mixin stack(tech)
@@ -25,10 +25,9 @@ block content
     +stack('Jade/Pug')
     +stack('SCSS')
     +stack('JQuery')
-    +stack('Express')
 
   p.dayNight  
 
-block stuff
+block footer
   #footer
-    h1= "My Stuff"
+    h4.dayNight= ">>> Currently seeking employment oppertunities in Victoria, BC <<<"
