--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,12 +1,14 @@
 .dayNight {
-  color: gainsboro;
+  color: blanchedalmond;
 }
 
 #body {
-  background: url(/images/night.jpg) no-repeat center center fixed;
+  background-image: url(https://images.pexels.com/photos/713664/pexels-photo-713664.jpeg);
   background-size: cover;
   background-position: center;
-  padding: 50px;
+  min-height: 100vh;
+  position: relative;
+  height: 100%;
   padding: 50px;
   padding-top: 0px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -21,8 +23,8 @@ profile {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 #profile {
@@ -31,18 +33,24 @@ profile {
   display: flex;
   position: absolute;
   width: 50vw;
+  height: 50vw;
   border-radius: 50%;
+  -khtml-border-radius: 50%;
   border: outset;
-  border-color: #f44336;
+  border-color: #582ffc;
   z-index: 3;
 }
 
 #profileBackgroundDay {
   display: none;
   width: 50vw;
+  height: 50vw;
   border-radius: 50%;
+  -khtml-border-radius: 50%;
   border: inset;
   z-index: 1;
+  -webkit-animation: spin 60s linear infinite;
+  animation: spin 60s linear infinite;
 }
 
 #profileBackgroundNight {
@@ -50,9 +58,12 @@ profile {
   display: -ms-flexbox;
   display: flex;
   width: 50vw;
+  height: 50vw;
   border-radius: 50%;
   border: inset;
   z-index: 2;
+  -webkit-animation: spin 60s linear infinite;
+  animation: spin 60s linear infinite;
 }
 
 #navbar {
@@ -60,11 +71,11 @@ profile {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 #menu {
@@ -81,13 +92,13 @@ profile {
   display: inline-flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   position: absolute;
   background-color: #424242;
   border-radius: 20px;
   margin: 5px;
-  margin-top: 500px;
+  margin-top: 50vh;
   margin-left: 1.5vw;
   padding-top: 3px;
   padding-bottom: 3px;
@@ -200,11 +211,11 @@ profile {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   top: 80px;
   background-color: hotpink;
 }
@@ -214,11 +225,11 @@ profile {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   top: 170px;
   background-color: #4caf50;
 }
@@ -228,11 +239,11 @@ profile {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   top: 260px;
   background-color: #f44336;
   /* Red */
@@ -243,11 +254,11 @@ profile {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   top: 350px;
   background-color: #2196f3;
   /* Blue */
@@ -258,11 +269,11 @@ profile {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   top: 440px;
   background-color: #555;
   /* Light Black */
@@ -274,6 +285,19 @@ profile {
   }
   .sidenav a {
     font-size: 18px;
+  }
+}
+
+@-webkit-keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 /*# sourceMappingURL=style.css.map */
