Refactor dayNight in JQuery

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -98,8 +98,8 @@ profile {
   background-color: #424242;
   border-radius: 20px;
   margin: 5px;
-  margin-top: 50vh;
-  margin-left: 1.5vw;
+  margin-top: 15px;
+  margin-left: 26.5vw;
   padding-top: 3px;
   padding-bottom: 3px;
   padding-left: 1px;
