--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -230,6 +230,11 @@ profile {
   background-color: #555; /* Light Black */
 }
 
+.like {
+  font-size: 5rem;
+  margin: 2rem;
+}
+
 @media screen and (max-height: 450px) {
   .sidenav {
     padding-top: 15px;
