--- a/views/about.pug
+++ b/views/about.pug
@@ -2,3 +2,57 @@ extends layout
 
 block content
   p this is about?
+  .dayNight.fad.fa-head-vr.like
+  .dayNight.fad.fa-drone-alt.like
+  .dayNight.fad.fa-magic.like
+  .dayNight.fad.fa-music.like
+  .dayNight.fad.fa-ship.like
+  .dayNight.fad.fa-camera-movie.like
+  .dayNight.fad.fa-campfire.like
+  .dayNight.fad.fa-cat.like
+  .dayNight.fad.fa-cctv.like
+  .dayNight.fad.fa-chess.like
+  .dayNight.fad.fa-child.like
+  .dayNight.fad.fa-space-shuttle.like
+  .dayNight.fad.fa-dice.like
+  .dayNight.fad.fa-french-fries.like
+  .dayNight.fad.fa-guitar.like
+  .dayNight.fad.fa-hot-tub.like
+  .dayNight.fad.fa-island-tropical.like
+  .dayNight.fad.fa-laptop-code.like 
+  .dayNight.fad.fa-pie.like 
+  .dayNight.fad.fa-plane-departure.like
+  .dayNight.fad.fa-map-pin.like
+  .dayNight.fad.fa-microscope.like
+  .dayNight.fad.fa-person-booth.like
+  .dayNight.fal.fa-planet-moon.like
+  .dayNight.fad.fa-podcast.like
+  .dayNight.fad.fa-portal-enter.like
+  .dayNight.fad.fa-recycle.like
+  .dayNight.fad.fa-road.like
+  .dayNight.fad.fa-sack-dollar.like
+  .dayNight.fad.fa-snowboarding.like
+  .dayNight.fad.fa-snowflakes.like
+  .dayNight.fad.fa-solar-system.like
+  .dayNight.fad.fa-construction.like
+  .dayNight.fad.fa-gamepad-alt.like
+  .dayNight.fad.fa-hat-chef.like
+  .dayNight.fad.fa-handshake.like
+  .dayNight.fad.fa-hiking.like
+  .dayNight.fad.fa-steak.like
+  .dayNight.fad.fa-telescope.like
+  .dayNight.fab.fa-telegram.like
+  .dayNight.fad.fa-turtle.like
+  .dayNight.fad.fa-unicorn.like
+  .dayNight.fad.fa-user-astronaut.like
+  .dayNight.fad.fa-user-robot.like
+  .dayNight.fad.fa-venus.like
+  .dayNight.fad.fa-volcano.like
+  .dayNight.fad.fa-yin-yang.like
+
+
+
+
+
+  p.dayNight I don't like 
+    <i class="fad fa-cricket"></i>
