--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,6 +7,7 @@ html
     script(src="https://kit.fontawesome.com/7761726a7c.js" )
 
     script(src="/javascripts/dayNight.js")
+    script(src="/javascripts/Toss.js")
 
     script(src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous")
   
