Add reduced profile image

--- a/views/index.pug
+++ b/views/index.pug
@@ -6,7 +6,7 @@ block content
   profile
     img#profileBackgroundDay(src="/images/sun.jpg")
     img#profileBackgroundNight(src="/images/moon.jpg")
-    img#profile(src="/images/TerrenceKuiper.png")
+    img#profile(src="/images/TerrenceKuiperX.png")
   
   p.dayNight I recently finished an intensive 12-week program with Lighthouse Labs and obtained a diploma in Web Development. This is a very rigorous program that teaches industry-leading languages like JavaScript, Ruby on Rails, and React. 
 
